# error-classifier-ml

./: .dockerignore  .env.example  .gitignore  CUSTOM_ML_IMPLEMENTATIONS.md  DOCKER.md  DYNAMIC_DATA_REFACTORING.md  Dockerfile  EXAM_MODE_DOCUMENTATION.md  FEEDBACK_LOOP_GUIDE.md  NLP_INTEGRATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  REDIS_CACHE.md  REFACTORING_SUMMARY.md  RESTRUCTURING_SUMMARY.md  SYSTEM_WORKFLOW.md  UI_UPDATE_GUIDE.md  api_server.py  constants.py  docker-compose.yml  main.py  requirements.txt  semantic_search.py  vector_db_classifier.py
core/: .dockerignore  .gitignore  API_STRUCTURE.md  Dockerfile  NLP_EXPLAINER_README.md  README_TESTS.md  demo_nlp_explainer.py  demo_nlu.py  pyproject.toml  pytest.ini  requirements.txt
core/src/: api_server.py  constants.py  interactive_feedback.py  server.py
core/src/algorithms/: __init__.py  bm25.py  feedback_database.py  feedback_loop.py  mongo_feedback_database.py  mongo_vector_store.py  nlp_explainer.py  nlu_classifier.py  vector_store.py
core/src/api/: __init__.py  services.py
core/src/api/controllers/: classify_controller.py  config_controller.py  dataset_controller.py  docs_controller.py  quiz_controller.py  status_controller.py
core/src/api/routes/: classify_routes.py  config_routes.py  dataset_routes.py  docs_routes.py  quiz_routes.py  status_routes.py
core/src/cache/: __init__.py  redis_cache.py
core/src/custom_ml/: __init__.py  edit_distance.py  text_processing.py
core/src/search_engines/: __init__.py  custom_tfidf_search.py  enhanced_custom_search.py  hybrid_custom_search.py
core/src/utils/: __init__.py  doc_scanner.py  logger.py
core/tests/: conftest.py  test_api_endpoints.py  test_bm25.py  test_cache.py  test_docs_security.py  test_nlp_explainer.py  test_similarity.py  test_tfidf.py
data/: input_examples.json
docker/: README.md  docker-compose.yml
ml/: Dockerfile  pyproject.toml
ml/src/: api_server.py  constants.py  device_utils.py  interactive_feedback.py  main.py  semantic_search.py  vector_db_classifier.py
ml/src/custom_ml/: __init__.py  bm25.py  feedback_loop.py  kmeans.py  similarity.py  tfidf.py
ml/src/search_engines/: __init__.py  custom_tfidf_search.py  enhanced_custom_search.py  hybrid_custom_search.py  hybrid_search.py  semantic_search.py
ui/: .dockerignore  .env.test  Dockerfile  README.md  index.html  (+5 more)
(+41 files in other folders)
