[project]
name = "error-classifier-ml"
version = "0.1.0"
description = "ML-powered error classification system with custom implementations (no blackbox libraries)"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "flask",
    "flask-cors",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
