[project]
name = "error-classifier-ml"
version = "0.1.0"
description = "ML-powered error classification system with custom implementations (no blackbox libraries)"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "flask",
    "flask-cors",
    "pymongo>=4.15.4",
    "dotenv>=0.9.9",
    "redis>=7.1.0",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
