[project]
name = "error-classifier-ml"
version = "0.1.0"
description = "ML-powered error classification system with vector database and semantic search"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "sentence-transformers",
    "torch",
    "chromadb",
    "pydantic-settings",
    "flask",
    "flask-cors",
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "faiss-cpu",
    "rank-bm25",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
